--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
 
-    <fragment
+    <!--<fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        app:uiRotateGestures="true"
+        app:uiZoomControls="true"/>
+        -->
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
@@ -20,4 +28,6 @@
         app:layout_constraintVertical_bias="0.0"
         app:uiRotateGestures="true"
         app:uiZoomControls="true" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
